[package]
name = "horizon_registry"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tonic-build = "0.12.3"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }